fixed solution pill button display on mobile and overflowing content

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -197,6 +197,10 @@ body {
   max-width: 200px !important;
 }
 
+.maxContent{
+  max-width: max-content !important;
+}
+
 .minContent{
   max-width: min-content !important;
 }
